[package]
name = "wasi-crypto-guest"
version = "0.1.4"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "Example WASI-Crypto guest bindings for Rust"
license-file = "LICENSE"
repository = "https://github.com/wasm-crypto/wasi-crypto-bindings"

[dependencies]
num_enum = "0.7.3"
